why not try UDA lol

--- a/evaluation.ipynb
+++ b/evaluation.ipynb
@@ -1354,6 +1354,400 @@
    "source": [
     "df_14.to_csv('./outputs/KIRBY_predictions_15.csv', index=False)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Adv Training"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "import torch.optim as optim\n",
+    "import numpy as np\n",
+    "from torchvision import datasets, models, transforms\n",
+    "from torch.utils.data import DataLoader, Dataset\n",
+    "import torch.nn.functional as F\n",
+    "import unet\n",
+    "from train_unet import DEVICE\n",
+    "import data_pipeline\n",
+    "from torch.utils.data import DataLoader, TensorDataset\n",
+    "from sklearn.preprocessing import RobustScaler\n",
+    "from tqdm import tqdm\n",
+    "\n",
+    "def build_tensors(test_dataframe, train_dataframe, apply_scaling=False):\n",
+    "    test_data = torch.from_numpy(np.vstack(test_dataframe['data'].to_numpy()))\n",
+    "    test_data = torch.nan_to_num(test_data)\n",
+    "    X_names = np.vstack(test_dataframe['filename'].to_numpy())\n",
+    "\n",
+    "    train_data = torch.from_numpy(np.vstack(train_dataframe['data'].to_numpy()))\n",
+    "    train_data = torch.nan_to_num(train_data)\n",
+    "    Y_train = torch.from_numpy(np.vstack(train_dataframe['labels'].to_numpy()))\n",
+    "\n",
+    "    train_data, test_data = train_data.reshape(-1, 36*36), test_data.reshape(-1, 36*36)\n",
+    "    scaler = RobustScaler().fit(train_data)\n",
+    "    train_data = torch.tensor(scaler.transform(train_data)).float().reshape(-1, 1, 36, 36)\n",
+    "    test_data = torch.tensor(scaler.transform(test_data)).float().reshape(-1, 1, 36, 36)\n",
+    "\n",
+    "    X_test = test_data.float().reshape(-1, 1, 36, 36)\n",
+    "    X_train = train_data.float().reshape(-1, 1, 36, 36)\n",
+    "    return X_test, X_names, X_train, Y_train\n",
+    "\n",
+    "\n",
+    "test_df = data_pipeline.build_test_dataframe(use_processed_images=False, limit_well_number=None)\n",
+    "\n",
+    "test_data = torch.from_numpy(np.vstack(test_df['data'].to_numpy()))\n",
+    "test_data = torch.nan_to_num(test_data)\n",
+    "# We can try this if it works for the default case\n",
+    "# count_less_than_neg_10 = torch.sum(test_data < -10, dim=1)\n",
+    "# total_elements_per_row = test_data.size(1)\n",
+    "# ratios = count_less_than_neg_10.float() / total_elements_per_row\n",
+    "# outliers = (ratios > .05).flatten()\n",
+    "# test_data[test_data < -10] = 0\n",
+    "\n",
+    "outliers = ((test_data.min(dim=1, keepdim=True).values < -10) == True).flatten()\n",
+    "test_df = test_df.drop(test_df.loc[outliers.tolist()].index)\n",
+    "\n",
+    "train_df = data_pipeline.build_dataframe(use_processed_images=False, limit_well_number=None)\n",
+    "\n",
+    "X_test, X_names, X_train, Y_train = build_tensors(test_df, train_df, apply_scaling=True)\n",
+    "\n",
+    "target_dataset = data_pipeline.WellsDataset(X_test, torch.zeros(len(X_test), 1), transform=None, wells=None)\n",
+    "target_dl = DataLoader(target_dataset, batch_size=128)\n",
+    "\n",
+    "source_dataset = data_pipeline.WellsDataset(X_train, torch.ones(len(X_train), 1), transform=None, wells=None)\n",
+    "source_dl = DataLoader(source_dataset, batch_size=128)\n",
+    "\n",
+    "adversarial_loss = torch.nn.BCELoss(reduction='mean')\n",
+    "\n",
+    "# Define your UNet, discriminator, and optimizer\n",
+    "generator = unet.UNet(n_channels=1, n_classes=1, n_steps=4, with_pl=True)\n",
+    "generator.load_state_dict(torch.load('./checkpoints/unet/unet_16.pt', map_location=DEVICE))\n",
+    "generator = generator.to(DEVICE)\n",
+    "\n",
+    "discriminator = unet.Unet_Discriminator(n_channels=1, n_classes=1).to(DEVICE)\n",
+    "\n",
+    "optimizer_generator = optim.Adam(generator.parameters())\n",
+    "optimizer_discriminator = optim.Adam(discriminator.parameters())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2it [00:09,  4.94s/it]\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[22], line 30\u001b[0m\n\u001b[1;32m     27\u001b[0m discriminator\u001b[38;5;241m.\u001b[39mzero_grad()\n\u001b[1;32m     28\u001b[0m optimizer_discriminator\u001b[38;5;241m.\u001b[39mzero_grad()\n\u001b[0;32m---> 30\u001b[0m source_images \u001b[38;5;241m=\u001b[39m \u001b[43msource_data\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mto\u001b[49m\u001b[43m(\u001b[49m\u001b[43mDEVICE\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     31\u001b[0m source_labels \u001b[38;5;241m=\u001b[39m source_labels\u001b[38;5;241m.\u001b[39mto(DEVICE)\n\u001b[1;32m     33\u001b[0m target_images \u001b[38;5;241m=\u001b[39m target_data\u001b[38;5;241m.\u001b[39mto(DEVICE)\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
+   "source": [
+    "num_epochs = 50\n",
+    "\n",
+    "# Training loop\n",
+    "for epoch in range(num_epochs):\n",
+    "    source_dl = DataLoader(source_dataset, batch_size=128, shuffle=True)\n",
+    "    source_iterator = iter(source_dl)\n",
+    "\n",
+    "    discriminator_losses = []\n",
+    "    generator_losses = []\n",
+    "\n",
+    "    discriminator_source_accs = []\n",
+    "    discriminator_target_accs = []\n",
+    "    generator_accs = []\n",
+    "\n",
+    "    for i, (target_data, target_labels) in tqdm(enumerate(target_dl)):\n",
+    "        # Train the discriminator\n",
+    "        source_data, source_labels = next(source_iterator)\n",
+    "\n",
+    "        if len(source_data) != len(target_data):\n",
+    "            perm = np.random.permutation(source_data)\n",
+    "            source_data = source_data[perm]\n",
+    "            source_data = source_data[:len(target_data)]\n",
+    "            \n",
+    "            source_labels = source_labels[perm]\n",
+    "            source_labels = source_labels[:len(target_labels)]\n",
+    "\n",
+    "        discriminator.zero_grad()\n",
+    "        optimizer_discriminator.zero_grad()\n",
+    "    \n",
+    "        source_images = source_data.to(DEVICE)\n",
+    "        source_labels = source_labels.to(DEVICE)\n",
+    "\n",
+    "        target_images = target_data.to(DEVICE)\n",
+    "        target_labels = target_labels.to(DEVICE)\n",
+    "\n",
+    "        source_outputs, _ = generator(source_images)\n",
+    "        source_outputs = source_outputs.detach()\n",
+    "        target_outputs, _ = generator(target_images)\n",
+    "        target_outputs = target_outputs.detach()\n",
+    "\n",
+    "        discrim_on_source = discriminator(source_outputs)\n",
+    "        discrim_on_target = discriminator(target_outputs)\n",
+    "\n",
+    "        discriminator_loss = adversarial_loss(discrim_on_source, source_labels) + adversarial_loss(discrim_on_target, target_labels)\n",
+    "        discriminator_losses.append(discriminator_loss.item())\n",
+    "        discriminator_loss.backward()\n",
+    "\n",
+    "        discrim_source_accuracy = torch.sum((torch.round(discrim_on_source) == source_labels)) / len(source_labels)\n",
+    "        discrim_target_accuracy = torch.sum((torch.round(discrim_on_target) == target_labels)) / len(target_labels)\n",
+    "\n",
+    "        discriminator_source_accs.append(discrim_source_accuracy)\n",
+    "        discriminator_target_accs.append(discrim_target_accuracy)\n",
+    "\n",
+    "        optimizer_discriminator.step()\n",
+    "\n",
+    "        # Train the generator\n",
+    "        generator.zero_grad()\n",
+    "        optimizer_generator.zero_grad()\n",
+    "\n",
+    "        outputs, _ = generator(target_images)\n",
+    "\n",
+    "        discrim_from_gen = discriminator(outputs)\n",
+    "\n",
+    "        generator_loss = adversarial_loss(discrim_from_gen, target_labels)\n",
+    "        generator_losses.append(generator_loss.item())\n",
+    "        generator_loss.backward()\n",
+    "\n",
+    "        generator_accuracy = torch.sum((torch.round(discrim_from_gen) == target_labels)) / len(target_labels)\n",
+    "        generator_accs.append(generator_accuracy)\n",
+    "\n",
+    "        optimizer_generator.step()\n",
+    "\n",
+    "    print(\"-\"*100)\n",
+    "    print(f\"epoch: {epoch}\")\n",
+    "    print(f\"Losses:\")\n",
+    "    print(f\"Discriminator loss: {np.mean(discriminator_losses)}\")\n",
+    "    print(f\"Generator loss: {np.mean(generator_losses)}\")\n",
+    "    print(f\"Accs:\")\n",
+    "    print(f\"Discrim on Source: {np.mean(discriminator_source_accs)}\")\n",
+    "    print(f\"Discrim on Target: {np.mean(discriminator_target_accs)}\")\n",
+    "    print(f\"Generator from Target: {np.mean(generator_accs)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(tensor([[[[ -8.1729,  -9.3576, -10.6770,  ..., -11.2727,  -8.8163,  -7.7028],\n",
+       "           [ -8.5766, -10.8548, -11.5732,  ..., -11.0234,  -8.8595,  -7.2714],\n",
+       "           [ -9.7254, -11.9217, -11.9954,  ...,  -9.8445,  -8.4705,  -7.0506],\n",
+       "           ...,\n",
+       "           [-11.6283, -13.1708, -11.5267,  ..., -11.5234, -10.6386,  -9.0989],\n",
+       "           [ -9.6964, -11.8100, -10.8972,  ..., -11.3039, -10.3502,  -8.8962],\n",
+       "           [ -9.1539, -10.1470, -10.1412,  ..., -10.9365, -10.2521,  -9.0446]]],\n",
+       " \n",
+       " \n",
+       "         [[[-10.2411,  -9.2058,  -5.7033,  ..., -10.0197,  -8.3885,  -6.4842],\n",
+       "           [-11.4864, -10.6576,  -5.6600,  ..., -12.3842,  -9.7781,  -6.3931],\n",
+       "           [-11.8132, -10.2745,  -5.5318,  ..., -12.2069,  -7.9992,  -5.2884],\n",
+       "           ...,\n",
+       "           [ -9.7889,  -6.5296,  -4.2003,  ...,  -9.3768,  -8.3437,  -7.9133],\n",
+       "           [ -9.0853,  -7.0978,  -4.9215,  ...,  -9.3034,  -8.5158,  -8.2705],\n",
+       "           [ -8.4938,  -6.5448,  -5.0266,  ...,  -9.5564,  -8.4268,  -7.6318]]],\n",
+       " \n",
+       " \n",
+       "         [[[ -8.2515,  -8.2653,  -8.3792,  ...,  -9.8121,  -9.4799,  -8.6273],\n",
+       "           [ -7.6834,  -8.5065,  -9.0365,  ..., -10.4404, -10.0884,  -9.6518],\n",
+       "           [ -8.4690,  -9.4748,  -9.9981,  ..., -10.7677, -10.6231, -10.0723],\n",
+       "           ...,\n",
+       "           [ -7.3763,  -6.5632,  -6.1946,  ...,  -8.4498,  -7.6577,  -7.7343],\n",
+       "           [ -7.5768,  -6.8956,  -6.2636,  ...,  -7.8818,  -6.6653,  -7.0482],\n",
+       "           [ -7.5477,  -6.9995,  -6.7677,  ...,  -8.1979,  -7.5469,  -7.3106]]],\n",
+       " \n",
+       " \n",
+       "         ...,\n",
+       " \n",
+       " \n",
+       "         [[[  4.7922,   3.8467,  -3.7487,  ...,  -0.0829,   4.6424,   5.6859],\n",
+       "           [  4.6329,   3.5509,  -3.9595,  ...,   0.2938,   4.4612,   5.4095],\n",
+       "           [  4.8450,   3.5705,  -4.0167,  ...,   0.1018,   4.0833,   5.1765],\n",
+       "           ...,\n",
+       "           [  4.1153,   3.0143,  -4.6665,  ...,  -4.2492,   5.3503,   6.9367],\n",
+       "           [  3.9304,   2.7843,  -4.6688,  ...,  -3.8028,   5.2322,   6.5493],\n",
+       "           [  3.9540,   2.7810,  -4.9208,  ...,  -4.4699,   5.0064,   6.1223]]],\n",
+       " \n",
+       " \n",
+       "         [[[ -9.8771, -11.9377, -12.6137,  ...,  -9.4225,  -8.7249,  -8.4051],\n",
+       "           [-11.0126, -12.8699, -14.8914,  ...,  -9.8008,  -8.6951,  -8.6036],\n",
+       "           [-12.1309, -12.6204, -15.1670,  ...,  -9.7488,  -8.2006,  -8.8660],\n",
+       "           ...,\n",
+       "           [-11.9603, -15.8311, -18.3527,  ...,  -7.9871,  -7.2799,  -6.7144],\n",
+       "           [-10.1755, -13.7342, -16.3052,  ...,  -7.0942,  -6.8723,  -6.8113],\n",
+       "           [ -8.9488, -11.4951, -13.4821,  ...,  -7.2655,  -7.6093,  -7.1266]]],\n",
+       " \n",
+       " \n",
+       "         [[[-12.1231, -12.9216, -11.1207,  ..., -12.2241, -10.7754,  -9.4986],\n",
+       "           [-13.3446, -14.7590, -12.3597,  ..., -15.1157, -12.1247,  -9.8247],\n",
+       "           [-13.7474, -14.1840, -12.4325,  ..., -14.9046, -13.7337, -11.2982],\n",
+       "           ...,\n",
+       "           [ -9.6558, -10.3480, -10.4263,  ..., -11.7204, -11.2310,  -9.5523],\n",
+       "           [ -8.2717,  -8.7215,  -9.7152,  ..., -11.0421, -10.2574,  -8.6162],\n",
+       "           [ -8.7250,  -8.6090,  -8.8408,  ..., -10.5389, -10.0038,  -8.8622]]]],\n",
+       "        device='mps:0', grad_fn=<ConvolutionBackward0>),\n",
+       " tensor([[ -4.2414],\n",
+       "         [ 12.1694],\n",
+       "         [  2.9945],\n",
+       "         [ -9.3713],\n",
+       "         [  8.2668],\n",
+       "         [ 11.6195],\n",
+       "         [ 10.4743],\n",
+       "         [  6.2911],\n",
+       "         [ 14.0497],\n",
+       "         [  7.2968],\n",
+       "         [ -8.6978],\n",
+       "         [  9.2092],\n",
+       "         [  2.8851],\n",
+       "         [  8.1727],\n",
+       "         [  7.7304],\n",
+       "         [  2.1899],\n",
+       "         [ -8.6447],\n",
+       "         [  5.3769],\n",
+       "         [  7.1445],\n",
+       "         [ -1.9679],\n",
+       "         [  8.8057],\n",
+       "         [ 14.2781],\n",
+       "         [ -9.1448],\n",
+       "         [ 10.1320],\n",
+       "         [  7.1914],\n",
+       "         [  8.3749],\n",
+       "         [  9.9531],\n",
+       "         [ -8.1591],\n",
+       "         [ -8.1952],\n",
+       "         [ 11.7872],\n",
+       "         [ 11.0388],\n",
+       "         [  6.2190],\n",
+       "         [  7.0891],\n",
+       "         [  9.0303],\n",
+       "         [ 11.9727],\n",
+       "         [  7.2672],\n",
+       "         [ 11.3070],\n",
+       "         [  9.9207],\n",
+       "         [  7.3479],\n",
+       "         [ 10.5078],\n",
+       "         [ -2.8505],\n",
+       "         [ -9.1994],\n",
+       "         [  8.3159],\n",
+       "         [  9.5837],\n",
+       "         [  8.6442],\n",
+       "         [  8.4657],\n",
+       "         [ 10.4319],\n",
+       "         [  3.6850],\n",
+       "         [ 12.6332],\n",
+       "         [  8.1152],\n",
+       "         [ -4.6726],\n",
+       "         [ 11.2597],\n",
+       "         [  5.4916],\n",
+       "         [  8.7122],\n",
+       "         [ 10.2364],\n",
+       "         [ -9.2471],\n",
+       "         [  9.7164],\n",
+       "         [  8.3363],\n",
+       "         [ 12.0372],\n",
+       "         [  8.2499],\n",
+       "         [ 10.8936],\n",
+       "         [  8.6562],\n",
+       "         [ -5.8114],\n",
+       "         [  7.4720],\n",
+       "         [ 11.6618],\n",
+       "         [ 10.0521],\n",
+       "         [  5.0417],\n",
+       "         [  6.5388],\n",
+       "         [  8.4731],\n",
+       "         [ 11.1929],\n",
+       "         [  9.3398],\n",
+       "         [  8.2801],\n",
+       "         [  9.4970],\n",
+       "         [ 12.9023],\n",
+       "         [ -8.8630],\n",
+       "         [ 11.8930],\n",
+       "         [ 12.3407],\n",
+       "         [  6.6677],\n",
+       "         [  6.5743],\n",
+       "         [ -6.7838],\n",
+       "         [  5.5262],\n",
+       "         [ -5.2073],\n",
+       "         [ 10.2522],\n",
+       "         [ 10.8202],\n",
+       "         [  6.0911],\n",
+       "         [  9.3031],\n",
+       "         [ 11.4524],\n",
+       "         [ 11.9118],\n",
+       "         [  7.2091],\n",
+       "         [  9.8384],\n",
+       "         [  7.0148],\n",
+       "         [ 11.2866],\n",
+       "         [  8.5600],\n",
+       "         [  8.8819],\n",
+       "         [  8.1297],\n",
+       "         [ -9.7987],\n",
+       "         [ 12.6014],\n",
+       "         [-10.5387],\n",
+       "         [  6.5536],\n",
+       "         [ -9.0651],\n",
+       "         [ -6.7399],\n",
+       "         [ -2.7455],\n",
+       "         [  9.9457],\n",
+       "         [ -4.9580],\n",
+       "         [ -6.6001],\n",
+       "         [ 10.9864],\n",
+       "         [  9.7413],\n",
+       "         [ 10.5998],\n",
+       "         [ 12.9993],\n",
+       "         [  8.1733],\n",
+       "         [-10.7645],\n",
+       "         [ 11.0147],\n",
+       "         [-11.2847],\n",
+       "         [  9.4473],\n",
+       "         [ -7.0882],\n",
+       "         [-11.9321],\n",
+       "         [  8.9000],\n",
+       "         [ 11.2422],\n",
+       "         [ 21.5862],\n",
+       "         [  8.6332],\n",
+       "         [ -6.5951],\n",
+       "         [ -7.1748],\n",
+       "         [-10.4132],\n",
+       "         [  2.0554],\n",
+       "         [  9.2395],\n",
+       "         [  6.0328],\n",
+       "         [  6.4588],\n",
+       "         [  8.0423]], device='mps:0', grad_fn=<LinearBackward0>))"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "source_outputs"
+   ]
   }
  ],
  "metadata": {
